# jetstream

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
api/: __init__.py  db.py  main.py  repo.py  schemas.py  seed.py
docs/: client-architecture.md  jetstream-spec.md  meridian-spec.md
docs/design/: 0001-foundational-decisions.md  0002-following-and-search.md  CANON.md  README.md  api-contract.md  client-architecture.md  color-swatches.html  data-model.md  ingestion-and-clustering.md  momentum-engine.md  phase-0-plan.md  synthesis-and-trust.md
pipeline/: __init__.py  config.py  sources.py
pipeline/cluster/: __init__.py  rules.py
pipeline/db/: __init__.py  connection.py  schema.sql  seed_phase0.sql
pipeline/ingest/: __init__.py  gdelt.py
pipeline/momentum/: __init__.py  engine.py  v0.py
pipeline/normalize/: __init__.py  crawl.py
pipeline/review/: __init__.py
pipeline/synthesis/: __init__.py  synthesize.py
scripts/: build_board.py  refresh.ps1  seed_phase0.py  seed_sources.py  synthesize_briefs.py  synthesize_timeline.py
shared/: package.json  tsconfig.json
shared/src/: index.ts  seed.ts  tokens.ts  types.ts
web/: next-env.d.ts  next.config.mjs  package.json  tsconfig.json
web/app/: globals.css  layout.tsx
web/app/board/: page.tsx
web/app/following/: page.tsx
web/app/search/: page.tsx
web/components/: MomentumBadge.tsx  MomentumLegend.tsx  Onboarding.tsx  TabBar.tsx  WatchToggle.tsx
web/components/charts/: AttentionArc.tsx  SlopeChart.tsx  (+2 more)
web/lib/: api.ts  style.ts
(+2 files in other folders)
