[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jetstream"
version = "0.0.0"
description = "Jetstream pipeline + serving API (Phase 0 scaffold)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "anthropic>=0.69",
  "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["pipeline*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"
